<resources>
    <string name="app_name">Whats Hey</string>
    <string name="phone">Telefone</string>
    <string name="clear_all">Limpar histórico</string>
    <string name="delete">Apagar</string>
    <string name="share">Compartilhar</string>
    <string name="share_app">Compartilhar App</string>
    <string name="send">Encaminhar</string>
    <string name="yesterday">Ontem</string>
    <string name="phone_invalid_message">Digite um número de telefone válido</string>
    <string name="id_app">ca-app-pub-5364358208843672~9814050304</string>

</resources>