<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/clear_all"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="always"
        android:id="@+id/menuDeleteAll"/>

    <item
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        android:id="@+id/menuDelete"/>

    <item
        android:title="@string/share"
        android:icon="@drawable/ic_send"
        app:showAsAction="always"
        android:id="@+id/menuShare"/>

    <item
        android:title="@string/send"
        android:icon="@drawable/ic_baseline_send"
        app:showAsAction="always"
        android:id="@+id/menuSend"/>


</menu>