<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/mainActions"
        tools:visible="true"
        android:visible="false">
        <item
            android:id="@+id/menuDelete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

        <item
            android:id="@+id/menuShare"
            android:icon="@drawable/ic_send"
            android:title="@string/share"
            app:showAsAction="always" />

        <item
            android:id="@+id/menuSend"
            android:icon="@drawable/ic_baseline_send"
            android:title="@string/send"
            app:showAsAction="always" />
    </group>

    <group android:id="@+id/othersActions">
        <item
            android:id="@+id/menuDeleteAll"
            android:icon="@drawable/ic_clear_all"
            android:title="@string/clear_all"
            app:showAsAction="never" />

        <item
            android:id="@+id/menuShareApp"
            android:icon="@drawable/ic_clear_all"
            android:title="@string/share_app"
            app:showAsAction="never" />
    </group>

</menu>